# telegrams

./: .env.test  Dockerfile  README.md  alembic.ini  pyproject.toml
app/: aiogram_run.py  config.py  main.py
app/bot/handlers/: client.py
app/bot/keyboards/: client.py
app/db/: base.py
app/db/alembic/: env.py
app/db/alembic/versions/: 2025_03_27_1651-300624c11fbd_nrfej.py
app/db/models/: __init__.py  telegram.py
app/handlers/: client.py
