[project]
name = "telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.19.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.39",
]
